--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Weather3</string>
+    <string name="about">About</string>
+    <string name="settings">Settings</string>
+    <string name="favorite_city">Favorite Cities</string>
+    <string name="city_selection">City selection</string>
+    <string name="city_web_page">City web page</string>
+    <string name="date_selection">Date selection</string>
+    <string name="weather_city">Weather in the city</string>
+    <string name="about_text">This is my first training app!</string>
+    <string name="item">Item</string>
 </resources>
