--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="no_btn">No</string>
     <string name="del_favorite_city_title">Delete favorite city</string>
     <string name="del_favorite_city_msg">Are you sure you want to delete your favorite city?</string>
+    <string name="enter_city_name_hint">Enter city name</string>
+    <string name="confirm_city_name_btn">Confirm</string>
 </resources>
