--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,4 +19,5 @@
     <string name="del_favorite_city_msg">Вы уверены, что хотите удалить любимый город?</string>
     <string name="enter_city_name_hint">Введите название города</string>
     <string name="confirm_city_name_btn">Подтвердить</string>
+    <string name="city_not_found">не найден</string>
 </resources>
