--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,21 +3,21 @@
     <string name="app_name">Погода3</string>
     <string name="about">О приложении</string>
     <string name="settings">Настройки</string>
-    <string name="favorite_city">Избранные города</string>
-    <string name="city_selection">Выбор города</string>
-    <string name="city_web_page">Веб-страница города</string>
+    <string name="favorite_location">Избранные города</string>
+    <string name="location_selection">Выбор города</string>
+    <string name="location_web_page">Веб-страница города</string>
     <string name="date_selection">Выбор даты</string>
-    <string name="weather_city">Погода в городе</string>
+    <string name="weather_location">Погода в городе</string>
     <string name="about_text">Это мое первое учебное приложение!</string>
     <string name="item">Item</string>
     <string name="windSpeed_format">%dм/с</string>
     <string name="pressure_format">%d мм рт. ст.</string>
-    <string name="msg_favorite_city_deleted">был удален</string>
+    <string name="msg_favorite_location_deleted">был удален</string>
     <string name="yes_btn">Да</string>
     <string name="no_btn">Нет</string>
-    <string name="del_favorite_city_title">Удалить любимый город</string>
-    <string name="del_favorite_city_msg">Вы уверены, что хотите удалить любимый город?</string>
-    <string name="enter_city_name_hint">Введите название города</string>
-    <string name="confirm_city_name_btn">Подтвердить</string>
-    <string name="city_not_found">не найден</string>
+    <string name="del_favorite_location_title">Удалить любимый город</string>
+    <string name="del_favorite_location_msg">Вы уверены, что хотите удалить любимый город?</string>
+    <string name="enter_location_name_hint">Введите название города</string>
+    <string name="confirm_location_name_btn">Подтвердить</string>
+    <string name="location_not_found">не найден</string>
 </resources>
