add settings screen

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -3,11 +3,11 @@
     <string name="app_name">Погода3</string>
     <string name="about">О приложении</string>
     <string name="settings">Настройки</string>
-    <string name="favorite_location">Избранные города</string>
-    <string name="location_selection">Выбор города</string>
-    <string name="location_web_page">Веб-страница города</string>
+    <string name="favorite_location">Избранные места</string>
+    <string name="location_selection">Выбор места</string>
+    <string name="location_web_page">Веб-страница места</string>
     <string name="date_selection">Выбор даты</string>
-    <string name="weather_location">Погода в городе</string>
+    <string name="weather_location">Погода сейчас</string>
     <string name="about_text">Это мое первое учебное приложение!</string>
     <string name="item">Item</string>
     <string name="windSpeed_format">%dм/с</string>
@@ -15,9 +15,20 @@
     <string name="msg_favorite_location_deleted">был удален</string>
     <string name="yes_btn">Да</string>
     <string name="no_btn">Нет</string>
-    <string name="del_favorite_location_title">Удалить любимый город</string>
+    <string name="del_favorite_location_title">Удалить избранное место</string>
     <string name="del_favorite_location_msg">Вы уверены, что хотите удалить любимый город?</string>
-    <string name="enter_location_name_hint">Введите название города</string>
+    <string name="enter_location_name_hint">Введите название места</string>
     <string name="confirm_location_name_btn">Подтвердить</string>
     <string name="location_not_found">не найден</string>
+    <string name="remove_locations">Очистить историю поиска</string>
+    <string name="remove_favorites_locations">Удалить избранные места</string>
+    <string name="remove">Удалить</string>
+    <string name="clear">Очистить</string>
+    <string name="clear_all_locations_msg">Вы уверены, что хотите очистить всю историю поиска?</string>
+    <string name="del_all_favorites_locations_msg">Вы уверены, что хотите удалить все ваши любимые места?</string>
+    <string name="clear_all_locations_title">Очистить всю историю поиска</string>
+    <string name="del_all_favorites_locations_title">Удалить избранные места</string>
+    <string name="clear_all_locations_toast">Историю поиска очищена</string>
+    <string name="del_all_favorites_locations_toast">Избранные места удалены</string>
+    <string name="current_location_selected_toast">Выбрано текущее местоположение</string>
 </resources>
